syntax = "proto3";
package config;

message StoredConfig {
    string username = 1;
    bytes encoded_key = 2;
    string peerId = 3;
}